src/test/deca/syntax/invalid/test_dir/added/parser/printlnx_with_void_after_comma.deca
{
	printlnx("Hello World !", 2,);
}
